<resources>
    <string name="app_name">Lab3</string>
    <string name="enteremail">Enter your Email Address</string>
    <string name="enterpw">Enter your password</string>
    <string name="login">Login</string>
    <string name="yourfile">Your profile</string>
    <string name="youname">Your Name</string>
    <string name="yourpic">Your picture</string>
    <string name="click">Click the button above to take a picture</string>
    <string name="goback">Go to chat</string>
    <string name="btnsend">Send</string>
    <string name="btnreceive">Receive</string>
    <string name="message">Type here</string>
    <string name="selectitem">The selected row is: </string>
    <string name="dbid">The database id: </string>
    <string name="ask">Do you want to delete this?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>